# contracts

./: API.md  CONTRACTS.md  INTERFACE.md  Makefile  README.md  SECURITY.md
investment_vault/: Cargo.toml
investment_vault/src/: composability.rs  events.rs  lib.rs  logic.rs  storage.rs  test.rs  types.rs  wasm_test.rs  wormhole.rs
investment_vault/test_snapshots/test/: bench_vault_batch_deposit_two_accounts.1.json  bench_vault_deposit.1.json  test_batch_deposit_mints_for_each_investor.1.json  test_claim_queued_emits_event.1.json  test_claim_settles_queued_redemption.1.json  test_constructor_panics_with_invalid_registry.1.json  test_conversion_empty_vault_is_1_to_1.1.json  test_conversion_roundtrip_first_deposit_exact.1.json  test_conversion_roundtrip_never_favors_withdrawer.1.json  test_convert_to_shares_and_assets_roundtrip.1.json  test_deposit_at_minimum_succeeds.1.json  test_deposit_below_minimum_panics.1.json  test_deposit_emits_event.1.json  test_deposit_proportional_after_first.1.json  test_enable_secondary_trading_emits_event.1.json  test_first_deposit_mints_1_to_1_shares.1.json  test_flash_loan_fails_without_repayment.1.json  test_full_withdrawal_blocked_by_outstanding_investments.1.json  test_full_withdrawal_with_no_investments.1.json  test_fund_project_allowed_when_thresholds_met.1.json  test_fund_project_blocked_below_credit_threshold.1.json  test_fund_project_blocked_below_green_threshold.1.json  test_fund_project_emits_event.1.json  test_fund_project_panics_when_amount_exceeds_available.1.json  test_fund_project_panics_when_fully_depleted.1.json  (+30 more)
(+66 files in other folders)
